<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/unesite_datum_resource"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/uneseniDatum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:editable="false"
        android:focusable="false"
        android:padding="10dp"
        android:textSize="22sp"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/unesite_kupca_resource"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/uneseniKupac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="10dp"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/unesite_iznos_resource"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/uneseniIznos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:digits="0123456789."
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/spremi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/spremi_promjene_resource" />
</LinearLayout>