<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <TextView
            android:id="@+id/datum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/datum_resource"
             />
        <TextView
            android:id="@+id/kupac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="2"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/kupac_resource"
             />
        <TextView
            android:id="@+id/iznos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/iznos_resource"
             />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@id/linearContainer"
        android:background="@color/svijetloSiva"/>

</RelativeLayout>